# update-dns

./: .gitignore  Cargo.toml  Gopkg.toml  LICENSE  README.md  config.go  dns.go  go.mod  go.sum  ip.go  main.go
src/: main.rs
